--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,31 @@
 spring.application.name=springboot-with-multiple-datasources
+
+# House DataSource Configuration
+spring.datasource.house.url=jdbc:mysql://localhost:3306/house_db?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.house.username=root
+spring.datasource.house.password=
+spring.datasource.house.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Lender DataSource Configuration
+spring.datasource.lender.url=jdbc:mysql://localhost:3306/lender_db?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.lender.username=root
+spring.datasource.lender.password=
+spring.datasource.lender.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA Configuration (common to both)
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.generate_statistics=true
+
+# Logging
+logging.pattern.console=%d{yyyy-MM-dd hh:mm:ss:SSS-a-zzz a} %clr(%-5p) %clr(${PID}){faint} [%thread] %c{1}:%L - %msg%n
+
+logging.level.com.folau=DEBUG
+# hibernate
+ogging.level.org.hibernate.resource.jdbc.internal.ResourceRegistryStandardImpl=TRACE
