--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=springboot-with-multiple-datasources
 
+server.port=7575
+
 # House DataSource Configuration
 spring.datasource.house.url=jdbc:mysql://localhost:3306/house_db?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.house.username=root
